Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45520

Translation texts for same source texts are missing when opening multiple translations

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.5.0 Beta
    • 5.4.1
    • Tools: Linguist
    • None
    • cebd22acc7e3125fa1f033f844d2fb1ea99f1f6c

      If you use ID based translations and have the same source text and comment, but a different ID, then Linguist won't show the translation text of the second (and onwards) occurrence of the source text.

      In the attached example, load the test_de.ts and test_es.ts into Linguist and you'll see that the second entry for 'Low' (line 13) does not show the Spanish translation (even though it is there inside the test_es.ts file)

        1. linguistbug.zip
          1 kB
          Tobias Koenig
        For Gerrit Dashboard: QTBUG-45520
        # Subject Branch Project Status CR V

            tokoe.kdab Tobias Koenig
            tokoe.kdab Tobias Koenig
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes