linguist: Fix loading of multiple identical source texts

Show all translations from all .ts files in case
they provide the same source text and comment multiple
times with different IDs.

Previously, Qt Linguist showed the translations only for
the first occurrence, because the merging code in
MultiDataModel::append() compared only source text
and comment, but not the message ID in case it was there.

Task-number: QTBUG-45520
Change-Id: I3b527f0d9ce67a88e1c235f4b67d106cc0a49dc2
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>